--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="https://github.com/anshud49/fbad/blob/main/src/index.jsx"></script>
   </body>
 </html>
